test/cases/compile_errors/main_function_with_bogus_args_type.zig
pub fn main(args: [][]bogus) !void {
    _ = args;
}

// error
//
// :1:23: error: use of undeclared identifier 'bogus'
